Add validation and readme.

--- a/client/assets/styles/variables.scss
+++ b/client/assets/styles/variables.scss
@@ -2,3 +2,5 @@ $offcanvas-transition-length: 0.5s;
 
 $nav-bar-bg-color: #4c4c4c;
 $nav-item-color: #fff;
+$danger-color: #f29d9d;
+$success-color: #b5fcb9;
