--- a/client/assets/styles/home.scss
+++ b/client/assets/styles/home.scss
@@ -78,6 +78,8 @@ body {
     max-width: 100vw;
   }
   .nav-item {
+    padding-left: 0;
+    padding-right: 0;
     a {
       width: 100%;
       font-family: OpenSansSemibold;
@@ -125,4 +127,26 @@ body {
   .button {
     width: 120px;
   }
+}
+
+
+.ng-valid.ng-dirty {
+  border-color: $success-color;
+}
+.ng-invalid.ng-dirty {
+  border-color: $danger-color;
+}
+
+.ng-submitted {
+  .ng-valid {
+    border-color: $success-color;
+  }
+  .ng-invalid {
+    border-color: $danger-color;
+  }
+}
+
+.error-message {
+  font-size: 8pt;
+  color: $danger-color;
 }
