--- a/client/views/contact_us/index.html
+++ b/client/views/contact_us/index.html
@@ -1,8 +1,19 @@
-<form id="contactUsForm" action="">
+<form name="contactUsForm" id="contactUsForm" ng-submit="contactUsForm.$valid && formSubmit(info)" novalidate>
   <div class="row align-center">
     <div class="small-12 medium-8 large-6 columns">
-      <input type="email" placeholder="Your email" ng-model="form.email" required name="email">
-      <textarea name="message" rows="10" placeholder="Your message"  ng-model="form.message"></textarea>
+
+      <!-- validation messages -->
+      <span class='error-message' ng-show="(contactUsForm.email.$dirty || contactUsForm.$submitted) && contactUsForm.email.$error.required">can't be blank</span>
+      <span class='error-message' ng-show="(contactUsForm.email.$dirty || contactUsForm.$submitted) && contactUsForm.email.$error.pattern">invalid email</span>
+
+      <input type="text" placeholder="Your email" ng-model="info.email"  name="email" ng-pattern="/^(([^<>()\[\]\\.,;:\s@']+(\.[^<>()\[\]\\.,;:\s@']+)*)|('.+'))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/" required>
+
+      <!-- validation messages -->
+      <span class='error-message' ng-show="(contactUsForm.message.$dirty || contactUsForm.$submitted) && contactUsForm.message.$error.required">can't be blank</span>
+      <span class='error-message' ng-show="(contactUsForm.message.$dirty || contactUsForm.$submitted) && contactUsForm.message.$error.minlength">is too short: min 10 symbols</span>
+
+      <textarea name="message" rows="10" placeholder="Your message"  ng-model="info.message" ng-minlength="10" required></textarea>
+
     </div>
   </div>
   <div class="row align-center">
