Add animals in views.

--- a/client/assets/styles/application.scss
+++ b/client/assets/styles/application.scss
@@ -3,4 +3,5 @@
 @import 'node_modules/foundation-sites/assets/foundation-flex';
 @import 'fonts';
 @import 'home';
+@import 'animals';
 @import 'contact_us';
