--- a/client/assets/styles/home.scss
+++ b/client/assets/styles/home.scss
@@ -7,6 +7,10 @@ body {
   color: $nav-bar-bg-color;
 }
 
+.main-content {
+  padding: 30px 20px;
+}
+
 .button {
   background-color: $nav-bar-bg-color;
   color: $nav-item-color;
